Fix: address width on tablet

--- a/shared/components/tables/Table/Table.scss
+++ b/shared/components/tables/Table/Table.scss
@@ -304,6 +304,9 @@ table.wallet {
     th:nth-child(1) {
       display: none;
     }
+    td:nth-child(4) {
+      width: 80px;
+    }
     td:nth-child(5) {
       div {
         display: flex;
@@ -312,6 +315,7 @@ table.wallet {
         button {
           margin-bottom: 10px;
           margin-right: 0;
+          max-width: 125px;
         }
       }
     }
